@@ -8,4 +8,5 @@
     <!-- settings -->
     <string id="30004">How many days to show</string>
     <string id="30005">General</string>
+    <string id="30006">Show subtitles</string>
 </strings>
