@@ -8,4 +8,5 @@
     <!-- seaded -->
     <string id="30004">Mitme päeva saateid näidatakse</string>
     <string id="30005">Üldine</string>
+    <string id="30006">Näita subtiitreid</string>
 </strings>
