@@ -2,5 +2,6 @@
 <settings>
 <category label="30005">
 	<setting id="days" type="number" label="30004" default="31"/>
+	<setting id="subtitles" type="bool" label="30006" default="true"/>
 </category>                                                                                                       
 </settings>
