@@ -1,3 +1,6 @@
+[B]Version 0.0.12[/B]
+- Changed live stream urls to have HD quality / Otsevaatamise urlide muutus,et oleks võimalik HD pilti vaadata
+- Subtitle support, can be toggled in settings / Subtiitrite tugi, saab seadete alt lubada/keelata
 [B]Version 0.0.11[/B]
 - Fixed Buggalo url / Buggalo urli parandus
 [B]Version 0.0.10[/B]
